# bisheng-rt

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  dataelem.LICENSE
docker/: ci.sh  (+12 more)
src/backends/cambricon_backend/: CMakeLists.txt
src/backends/cambricon_backend/src/: cambricon.cc  cambricon_backend_utils.cc  cambricon_backend_utils.h
src/backends/dataelem_backend/: CMakeLists.txt  README.md
src/backends/dataelem_backend/cmake/: TritonDataelemBackendConfig.cmake.in
src/backends/dataelem_backend/examples/app_respository/ocr_app/: config.pbtxt
src/backends/dataelem_backend/examples/model_repository/mrcnn/: config.pbtxt
src/backends/dataelem_backend/examples/model_repository/mrcnn_graph/: config.pbtxt
src/backends/dataelem_backend/examples/model_repository/transformer_graph/: config.pbtxt
src/backends/dataelem_backend/include/dataelem/alg/: cropconcat.h  dbnet.h  distribution.h  east.h  eg_alg.h  general_prep.h  imgdecode.h  lanms.h  mrcnn.h  mrcnn_v5.h  ocr_app.h  ppcls.h  ppdet.h  pprec.h  recog_helper.h  tablemrcnn.h  text_classifier.h  transformer.h
src/backends/dataelem_backend/include/dataelem/apps/: bls_app.h
src/backends/dataelem_backend/include/dataelem/common/: json_utils.h  mat_utils.h  status.h  thread_pool.h
src/backends/dataelem_backend/include/dataelem/framework/: alg.h  alg_context.h  alg_factory.h  alg_utils.h  app.h  app_factory.h  iop.h  types.h
src/backends/dataelem_backend/include/ext/clipper/: clipper.hpp
src/backends/dataelem_backend/include/ext/ppocr/: clipper.h  ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  postprocess_op.h  preprocess_op.h  utility.h
src/backends/dataelem_backend/src/dataelem/alg/: crnn.cc  crnn.h  cropconcat.cc  dbnet.cc  distribution.cc  east.cc  eg_alg.cc  general_prep.cc  imgdecode.cc  lanms.cc  mrcnn.cc  mrcnn_v5.cc  ocr_app.cc  ppcls.cc  ppdet.cc  pprec.cc  recog_helper.cc  tablemrcnn.cc  text_classifier.cc  transformer.cc  transformer_v1.cc  transformer_v1.h  two_classification.cc  two_classification.h
src/backends/dataelem_backend/src/dataelem/apps/: bls_app.cc  ocr_app.cc  ocr_app.h
src/backends/dataelem_backend/src/dataelem/backend/: backend.cc
src/backends/dataelem_backend/src/dataelem/common/: apidata.cc  apidata.h  json_utils.cc  mat_utils.cc  status.cc
src/backends/dataelem_backend/src/dataelem/framework/: alg.cc  alg_utils.cc  app.cc
src/backends/dataelem_backend/src/ext/clipper/: clipper.cpp
src/backends/dataelem_backend/src/ext/mapbox/: optional.hpp  recursive_wrapper.hpp  variant.hpp
src/backends/dataelem_backend/src/ext/ppocr/: args.cpp  clipper.cpp  main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
src/backends/dataelem_backend/src/ext/rmustache/: mustache.cc  mustache.h
src/backends/enflame_backend/: CMakeLists.txt
src/backends/enflame_backend/src/: enflame.cc  enflame_backend_utils.cc  enflame_backend_utils.h
src/backends/huawei_backend/: CMakeLists.txt
src/backends/huawei_backend/src/: huawei.cc  huawei_backend_utils.cc  huawei_backend_utils.h
src/backends/openvino_backend/test/: CMakeLists.txt  openvino_test.cpp  openvino_test.py
src/custom_plugin/dali/: CMakeLists.txt  base64.h  dummy.cc  dummy.cu  dummy.h  oc_resize.cc  oc_resize.h
src/custom_plugin/tf/: CMakeLists.txt  README.md  changelog
src/custom_plugin/tf/plugin/: CMakeLists.txt
src/custom_plugin/tf/plugin/fastertransformer/: CMakeLists.txt  beamsearch_opennmt.h  faster_transformer.h  ocr_decoding_opennmt.h  ocr_encoder_transformer.h  ocr_open_decoder.h
src/custom_plugin/tf/plugin/fastertransformer/cuda/: CMakeLists.txt  cuda_kernels.cu  cuda_kernels.h  ocr_open_attention.cu  ocr_open_attention.h  ocr_open_decoder.cu
src/custom_plugin/tf/plugin/fastertransformer/tf_op/: CMakeLists.txt  beam_search_op.cc  beam_search_op.cu  beam_search_op.h  common_op.h  ocr_decoding_op.cc  ocr_decoding_op.cu.cc  ocr_decoding_op.h  (+3 more)
src/custom_plugin/tf/samples/fastertransformer/: README.md  convert_model.py  ocr_fastertransformer.py  ocr_transformer.py  transformer_model_convert.py
src/tests/: CMakeLists.txt
src/tests/cc/cambricon/: CMakeLists.txt  CMakeLists1.txt  demo.cc  gen_mm_onnx.sh  gen_mm_tf.sh
src/tests/cc/enflame/: Makefile_convert  Makefile_dbnet  Makefile_rec  cls_graph_enflame.cpp  dbnet_graph_enflame.cpp  onnx2enflameengine.cpp  rec_graph_enflame.cpp
src/tests/cc/enflame/utils/: run_utils.cpp  run_utils.h  tops_stream_struct.h  tops_utils.cpp  tops_utils.h
src/tests/cc/huawei/: CMakeLists.txt  acl.json  convet.sh  demo.cc
src/tests/cc/license/: license_test.cc
src/tests/cc/localization/: CMakeLists.txt  dbnet_post.cc  mrcnn_v5.1_post.cc
src/tests/cc/openvino/: build_openvino_test.sh  build_openvino_test_arm.sh  openvino_test.cpp  openvino_test_arm.cpp
src/tests/cc/ppocr/: CMakeLists.txt  cropconcat.cc  ppcls.cc  ppdet.cc  pprec.cc
src/tests/python/L0_http/: generate_endpoint_test.py  prepare.sh  simple_test.py  test.sh
src/tests/python/L0_http/config/: server_config.pbtxt
src/tests/python/elem_layout_collection/: app_config.pbtxt  elem_layout_collection_v1.json  run.sh  run_tests.sh  test_elam_layout.py  test_layout_with_ocr.py
src/tests/python/elem_ocr/: app_config.pbtxt  elem_ocr_collection_v3.json  elem_ocr_v3.json  elem_ocr_v3_gpus.json  run.sh
src/tests/python/huggingface_backend/: llm_models.config  test_llm.py
src/tests/python/vllm/: Qwen-14B-Chat.json  Qwen-1_8B-Chat.json  Qwen-7B-Chat-nondecoupled.json  Qwen-7B-Chat.json  model_req.json  prepare.sh  prompts.txt  requirements.txt  run.sh  test_generate.py  test_vllm_api.py  test_vllm_sse.py  vllm_api.py  vllm_client.py  vllm_model_client.py
src/tests/regression/: run_all.sh  test_close_models.py  test_llm.py  test_load_unload.py  test_model.py  test_old_protocol.py
src/tests/regression/config/: closed_models.json  load_unload.json  models.json
src/tests/scripts/: model_repo_test.sh
src/tools/: CMakeLists.txt  decrypt_file_v0.cc  encrypt_file.cc  hasp_mgr.cpp  license_mgr.cc  license_mgr_dataelem.cc  opencv_tensor.cc  pbtxt2pb.cc
(+582 files in other folders)
